<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/perfil"
                android:scaleType="centerInside"
                android:layout_marginBottom="20dp"/>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <ImageView

                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:src="@drawable/perfil_2"
                   android:id="@+id/icone_perfil"
                   android:layout_marginRight="20dp"
                   android:scaleType="fitCenter" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView android:text="@string/Salvar_em" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/espaço_inicial"/>

                <TextView android:text="marcelo56@gmail.com" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/espaço_inicial"/>
            </LinearLayout>


           </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/perfil_2"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitCenter" />

                    <EditText
                        android:hint="@string/Nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/telefone"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitCenter" />


                <EditText  android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Telefone"
                    android:inputType="number"/>

            </LinearLayout>


            <EditText
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Celular"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/carta"
                    android:layout_marginRight="20dp"
                    android:scaleType="fitCenter" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    />

            </LinearLayout>

            <EditText
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Residencial"
                />
            <TextView android:text="@string/Mais_Campos" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000FF"
                android:layout_marginLeft="50dp"
                />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
